Add shops locations block

--- a/index.html
+++ b/index.html
@@ -61,41 +61,41 @@
     </div>
 
     <div class="project-body__geo">
-      <div class="geo-title">Locations</div>
-
-      <div class="geo-downtown-block">
-        <div class="geo-downtown-title">Downtown</div>
-        <div class="geo-downtown__content">
-          <br />384 West 4th St>
-          <br />Suite 106>
-          <br />Portland, Maine>
+      <div class="geo-locations">
+        <div class="geo-locations__title">
+          Locations
         </div>
       </div>
 
-      <div class="geo-eastbayside-block">
-        <div class="geo-eastbayside-title">East Bayside</div>
-        <div class="geo-eastbayside__content">
-          <br />3433 Phisherman's Avenue
-          <br />(Northwest Corner)
-          <br />Portland, Maine
+      <div class="geo-locations__locations">
+        <div class="shop-location">
+          <div class="shop-location__title">Downtown</div>
+          <div class="shop-location__address">
+            <br />384 West 4th St>
+            <br />Suite 106>
+            <br />Portland, Maine>
+          </div>
         </div>
-      </div>
 
-      <div class="geo-oakdale-block">
-        <div class="geo-oakdale-title">Oakdale</div>
-        <div class="geo-oakdale__content">
-          <br />515 Crescent Avenue
-          <br />Second Floor
-          <br />Portland, Maine
+        <div class="shop-location">
+          <div class="shop-location__title">East Bayside</div>
+          <div class="shop-location__address">
+            <br />3433 Phisherman's Avenue
+            <br />(Northwest Corner)
+            <br />Portland, Maine
+          </div>
+        </div>
+
+        <div class="shop-location">
+          <div class="shop-location__title">Oakdale</div>
+          <div class="shop-location__address">
+            <br />515 Crescent Avenue
+            <br />Second Floor
+            <br />Portland, Maine
+          </div>
         </div>
       </div>
     </div>
-
-
-
-
-
-
   </div>
 </body>
 </html>
