--- a/index.html
+++ b/index.html
@@ -97,5 +97,21 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer">
+    <div class="footer__shop-name">
+      The Tea Cozy
+    </div>
+
+    <a href="mailto:contact@theteacozy.com" class="footer__email">contact@theteacozy.com</a>
+
+    <div class="footer__phone">
+      917-555-8904
+    </div>
+
+    <div class="footer__copyright">
+      copyright The Tea Cozy 2017
+    </div>
+  </footer>
 </body>
 </html>
