Add ids to main block so header links work

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
   <div class="project-body">
     <div class="project-body__mission">
-      <div class="mission-content">
+      <div class="mission-content" id="mission">
         <div class="mission-content__title">Our Mission</div>
         <div class="mission-content__statement">Handpicked, Artisinally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
         </div>
       </div>
     </div>
 
-    <div class="project-body__shop">
+    <div class="project-body__shop" id="store">
       <div class="shop-choice">
         <div class="shop-choice__title">Tea of the Month</div>
         <div class="shop-choice__statement">What's steeping at The Tea Cozy?
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <div class="project-body__geo">
+    <div class="project-body__geo" id="locations">
       <div class="geo-locations">
         <div class="geo-locations__title">
           Locations
